--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,13 +41,13 @@ h2 {
 .navbar {
   border: 1px solid #000;
   grid-area: navbar;
-  
+
 
 }
 
 .box {
   padding: 4px;
- 
+
 
   display: flex;
   justify-content: space-evenly;
@@ -117,3 +117,7 @@ h2 {
   cursor: pointer;
 }
 
+.icons {
+  display: flex;
+  justify-content: space-around ;
+}
