Små rettelser i ift at fjerne border på navbar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,7 +39,6 @@ h2 {
 }
 
 .navbar {
-  border: 1px solid #000;
   grid-area: navbar;
 
 
@@ -92,7 +91,7 @@ h2 {
 
 .fa-login {
 
-  background-color: blue;
+  background-color: #4267B2;
   border: none;
   color: white;
   border-radius: 10px;
