--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,6 +41,9 @@ h1 {
   font-family: Gill Sans, sans-serif;
   font-weight: 300;
 }
+.beskrivelse {
+  margin: 10px;
+}
 
 .underoverskrift {
   text-align: center;
